program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -15,7 +15,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 "X-Generator: Poedit 1.8.11\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
@@ -1385,6 +1385,7 @@ msgid " day"
 msgid_plural " days"
 msgstr[0] " giorno"
 msgstr[1] " giorni"
+msgstr[2] " giorni"
 
 #: src/merge/output_control.cpp:276
 #: src/merge/output_control.cpp:286
@@ -1400,6 +1401,7 @@ msgid " second"
 msgid_plural " seconds"
 msgstr[0] " secondo"
 msgstr[1] " secondi"
+msgstr[2] " secondi"
 
 #: src/common/kax_info.cpp:303
 #, no-c-format
@@ -1537,6 +1539,7 @@ msgid "%1 bit per sample"
 msgid_plural "%1 bits per sample"
 msgstr[0] "%1 bit per campione"
 msgstr[1] "%1 bit per campione"
+msgstr[2] "%1 bit per campione"
 
 #: src/mkvtoolnix-gui/header_editor/attached_file_page.cpp:123
 #: src/mkvtoolnix-gui/header_editor/attached_file_page.cpp:127
@@ -1547,6 +1550,7 @@ msgid "%1 byte (%2)"
 msgid_plural "%1 bytes (%2)"
 msgstr[0] "%1 byte (%2)"
 msgstr[1] "%1 byte (%2)"
+msgstr[2] "%1 byte (%2)"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:132
 #: src/mkvtoolnix-gui/merge/track_model.cpp:706
@@ -1555,6 +1559,7 @@ msgid "%1 channel"
 msgid_plural "%1 channels"
 msgstr[0] "%1 canale"
 msgstr[1] "%1 canali"
+msgstr[2] "%1 canali"
 
 #: src/mkvtoolnix-gui/merge/track_model.cpp:139
 #: src/mkvtoolnix-gui/merge/track_model.cpp:342
@@ -1563,6 +1568,7 @@ msgid "%1 entry"
 msgid_plural "%1 entries"
 msgstr[0] "%1 elemento"
 msgstr[1] "%1 elementi"
+msgstr[2] "%1 elementi"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:113
 #, no-c-format
@@ -1570,6 +1576,7 @@ msgid "%1 error"
 msgid_plural "%1 errors"
 msgstr[0] "%1 errore"
 msgstr[1] "%1 errori"
+msgstr[2] "%1 errori"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:142
 #: src/mkvtoolnix-gui/merge/track_model.cpp:716
@@ -1583,6 +1590,7 @@ msgid "%1 warning"
 msgid_plural "%1 warnings"
 msgstr[0] "%1 notifica"
 msgstr[1] "%1 notifiche"
+msgstr[2] "%1 notifiche"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:349
 #, no-c-format
@@ -1838,6 +1846,7 @@ msgid "&Disable selected attachment"
 msgid_plural "&Disable selected attachments"
 msgstr[0] "&Disabilita allegato selezionato"
 msgstr[1] "&Disabilita allegati selezionati"
+msgstr[2] "&Disabilita allegati selezionati"
 
 #: src/mkvtoolnix-gui/merge/ask_scan_for_playlists_dialog.cpp:34
 #, no-c-format
@@ -1880,6 +1889,7 @@ msgid "&Enable selected attachment"
 msgid_plural "&Enable selected attachments"
 msgstr[0] "Abilita all&egato selezionato"
 msgstr[1] "Abilita all&egati selezionati"
+msgstr[2] "Abilita all&egati selezionati"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/tab.h:522
 #, no-c-format
@@ -2197,6 +2207,7 @@ msgid "&Remove attachment"
 msgid_plural "&Remove attachments"
 msgstr[0] "&Rimuovi allegato"
 msgstr[1] "&Rimuovi allegati"
+msgstr[2] "&Rimuovi allegati"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/mass_modification_dialog.h:212
 #, no-c-format
@@ -2209,6 +2220,7 @@ msgid "&Remove file"
 msgid_plural "&Remove files"
 msgstr[0] "&Rimuovi file"
 msgstr[1] "&Rimuovi file"
+msgstr[2] "&Rimuovi file"
 
 #: src/mkvtoolnix-gui/jobs/tool.cpp:217
 #, no-c-format
@@ -2216,6 +2228,7 @@ msgid "&Remove job"
 msgid_plural "&Remove jobs"
 msgstr[0] "&Rimuovi attività"
 msgstr[1] "&Rimuovi attività"
+msgstr[2] "&Rimuovi attività"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2212
 #, no-c-format
@@ -2320,6 +2333,7 @@ msgid "&Start job automatically"
 msgid_plural "&Start jobs automatically"
 msgstr[0] "&Avvia automaticamente l'attività"
 msgstr[1] "&Avvia automaticamente le attività"
+msgstr[2] "&Avvia automaticamente le attività"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/generate_sub_chapters_parameters_dialog.h:183
 #, no-c-format
@@ -3083,6 +3097,7 @@ msgid "A problem has been detected with this installation of MKVToolNix:"
 msgid_plural "Several problems have been detected with this installation of MKVToolNix:"
 msgstr[0] "In questa installazione di MKVToolNix è stato rilevato un problema:"
 msgstr[1] "In questa installazione di MKVToolNix sono stati rilevati diversi problemi:"
+msgstr[2] "In questa installazione di MKVToolNix sono stati rilevati diversi problemi:"
 
 #: src/common/property_element.cpp:123
 #, no-c-format
@@ -4677,6 +4692,7 @@ msgid "Chapters: {0} entry"
 msgid_plural "Chapters: {0} entries"
 msgstr[0] "Capitoli: {0} elemento"
 msgstr[1] "Capitoli: {0} elementi"
+msgstr[2] "Capitoli: {0} elementi"
 
 #: src/mkvtoolnix-gui/merge/track_model.cpp:85
 #, no-c-format
@@ -7030,6 +7046,7 @@ msgid "Global tags: {0} entry"
 msgid_plural "Global tags: {0} entries"
 msgstr[0] "Etichette globali: {0} elemento"
 msgstr[1] "Etichette globali: {0} elementi"
+msgstr[2] "Etichette globali: {0} elementi"
 
 #: src/common/property_element.cpp:188
 #, no-c-format
@@ -8279,6 +8296,7 @@ msgid "Length: %1 byte"
 msgid_plural "Length: %1 bytes"
 msgstr[0] "Lunghezza: %1 byte"
 msgstr[1] "Lunghezza: %1 byte"
+msgstr[2] "Lunghezza: %1 byte"
 
 #: src/merge/timestamp_factory.cpp:359
 #, no-c-format
@@ -9495,6 +9513,7 @@ msgid "Only {0} chapter found in source files & chapter files."
 msgid_plural "Only {0} chapters found in source files & chapter files."
 msgstr[0] "Trovati solo {0} capitoli nei file sorgenti & file capitolo."
 msgstr[1] "Trovati solo {0} capitoli nei file sorgenti & file capitolo."
+msgstr[2] "Trovati solo {0} capitoli nei file sorgenti & file capitolo."
 
 #: src/common/file_types.cpp:97
 #, no-c-format
@@ -9533,6 +9552,7 @@ msgid "Open corresponding file in &MediaInfo"
 msgid_plural "Open corresponding files in &MediaInfo"
 msgstr[0] "Apri file corrispondete in &MediaInfo"
 msgstr[1] "Apri file corrispondenti in &MediaInfo"
+msgstr[2] "Apri file corrispondenti in &MediaInfo"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:1646
 #, no-c-format
@@ -9540,6 +9560,7 @@ msgid "Open file in &MediaInfo"
 msgid_plural "Open files in &MediaInfo"
 msgstr[0] "Apri file in &MediaInfo"
 msgstr[1] "Apri file in &MediaInfo"
+msgstr[2] "Apri file in &MediaInfo"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:195
 #, no-c-format
@@ -9562,6 +9583,7 @@ msgid "Opening %1 file in the chapter editor…"
 msgid_plural "Opening %1 files in the chapter editor…"
 msgstr[0] "Apertura di %1 file nell'editor capitoli…"
 msgstr[1] "Apertura di %1 file nell'editor capitoli…"
+msgstr[2] "Apertura di %1 file nell'editor capitoli…"
 
 #: src/mkvtoolnix-gui/header_editor/tool.cpp:206
 #, no-c-format
@@ -9569,6 +9591,7 @@ msgid "Opening %1 file in the header editor…"
 msgid_plural "Opening %1 files in the header editor…"
 msgstr[0] "Apertura di %1 file nell'editor intestazione…"
 msgstr[1] "Apertura di %1 file nell'editor intestazione…"
+msgstr[2] "Apertura di %1 file nell'editor intestazione…"
 
 #: src/mkvtoolnix-gui/forms/header_editor/action_for_dropped_files_dialog.h:114
 #: src/mkvtoolnix-gui/forms/header_editor/action_for_dropped_files_dialog.h:115
@@ -9809,6 +9832,7 @@ msgid "Playlists shorter than %1 second will be ignored."
 msgid_plural "Playlists shorter than %1 seconds will be ignored."
 msgstr[0] "Le playlist più corte di %1 secondo verranno ignorate."
 msgstr[1] "Le playlist più corte di %1 secondi verranno ignorate."
+msgstr[2] "Le playlist più corte di %1 secondi verranno ignorate."
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:541
 #, no-c-format
@@ -9836,6 +9860,7 @@ msgid "Please re-install MKVToolNix or fix the problem manually."
 msgid_plural "Please re-install MKVToolNix or fix the problems manually."
 msgstr[0] "Re-installa MKVToolNix o correggi manualmente il problema."
 msgstr[1] "Re-installa MKVToolNix o correggi manualmente i problemi."
+msgstr[2] "Re-installa MKVToolNix o correggi manualmente i problemi."
 
 #: src/merge/mkvmerge.cpp:412
 #, no-c-format
@@ -9988,6 +10013,7 @@ msgid "Problem with MKVToolNix installation"
 msgid_plural "Problems with MKVToolNix installation"
 msgstr[0] "Problema con l'installazione di MKVToolNix"
 msgstr[1] "Problemi con l'installazione di MKVToolNix"
+msgstr[2] "Problemi con l'installazione di MKVToolNix"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2114
 #, no-c-format
@@ -10789,6 +10815,7 @@ msgid "Scanning {0} files in {1} playlist.\n"
 msgid_plural "Scanning {0} files in {1} playlists.\n"
 msgstr[0] "Analisi di {0} file in {1} playlist.\n"
 msgstr[1] "Analisi di {0} file in {1} playlist.\n"
+msgstr[2] "Analisi di {0} file in {1} playlist.\n"
 
 #: src/common/kax_element_names.cpp:167
 #, no-c-format
@@ -10907,6 +10934,7 @@ msgid "Select all &items from selected file"
 msgid_plural "Select all &items from selected files"
 msgstr[0] "Selez&iona tutte gli elementi dal file selezionato"
 msgstr[1] "Selez&iona tutte gli elementi dai file selezionati"
+msgstr[2] "Selez&iona tutte gli elementi dai file selezionati"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:1691
 #, no-c-format
@@ -11494,6 +11522,7 @@ msgid "Start job &immediately"
 msgid_plural "Start jobs &immediately"
 msgstr[0] "Avvia &immediatamente l'attività"
 msgstr[1] "Avvia &immediatamente le attività"
+msgstr[2] "Avvia &immediatamente le attività"
 
 #: src/mkvtoolnix-gui/jobs/tool.cpp:215
 #, no-c-format
@@ -11501,6 +11530,7 @@ msgid "Start job &manually"
 msgid_plural "Start jobs &manually"
 msgstr[0] "Avvia &manualmente l'attività"
 msgstr[1] "Avvia &manualmente le attività"
+msgstr[2] "Avvia &manualmente le attività"
 
 #: src/mkvtoolnix-gui/forms/watch_jobs/tab.h:291
 #, no-c-format
@@ -11687,6 +11717,7 @@ msgid "Tags for track ID {0}: {1} entry"
 msgid_plural "Tags for track ID {0}: {1} entries"
 msgstr[0] "Tag ID traccia {0}: {1} elemento"
 msgstr[1] "Tag ID traccia {0}: {1} elementi"
+msgstr[2] "Tag ID traccia {0}: {1} elementi"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2191
 #, no-c-format
@@ -12232,6 +12263,7 @@ msgid "The directory it is located in contains %1 other file with the same exten
 msgid_plural "The directory it is located in contains %1 other files with the same extension."
 msgstr[0] "La cartella contiene %1 altro file con la stessa estensione."
 msgstr[1] "La cartella contiene %1 altri file con la stessa estensione."
+msgstr[2] "La cartella contiene %1 altri file con la stessa estensione."
 
 #: src/merge/connection_checks.h:48
 #, no-c-format
@@ -13614,6 +13646,7 @@ msgid "This audio track contains {0} byte of invalid data which was skipped befo
 msgid_plural "This audio track contains {0} bytes of invalid data which were skipped before timestamp {1}."
 msgstr[0] "Questa traccia audio contiene {0} byte di dati non validi che sono stati ignorati prima del timestamp {1}."
 msgstr[1] "Questa traccia audio contiene {0} byte di dati non validi che sono stati ignorati prima del timestamp {1}."
+msgstr[2] "Questa traccia audio contiene {0} byte di dati non validi che sono stati ignorati prima del timestamp {1}."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:50
 #, no-c-format
@@ -16274,6 +16307,7 @@ msgid "{0} byte"
 msgid_plural "{0} bytes"
 msgstr[0] "{0} byte"
 msgstr[1] "{0} byte"
+msgstr[2] "{0} byte"
 
 #: src/common/kax_info.cpp:943
 #, no-c-format
@@ -16296,6 +16330,7 @@ msgid "{0} minute"
 msgid_plural "{0} minutes"
 msgstr[0] "{0} minuto"
 msgstr[1] "{0} minuti"
+msgstr[2] "{0} minuti"
 
 #: src/common/strings/formatting.cpp:249
 #, no-c-format
@@ -16303,6 +16338,7 @@ msgid "{0} second"
 msgid_plural "{0} seconds"
 msgstr[0] "{0} secondo"
 msgstr[1] "{0} secondi"
+msgstr[2] "{0} secondi"
 
 #: src/common/strings/formatting.cpp:262
 #, no-c-format
